# stock-information-scraper

./: .gitignore  LICENSE  README.md  build.py  data_providers.py  main.py  pyproject.toml  requirements.txt  scraper.py  test.py  tickers.txt
.github/workflows/: build.yml  integration-test.yml
stock_information_scraper/: OLD_stock_information.py  __init__.py  csv_generator.py  html_fetcher.py  main.py  stock_information.py  tickers.txt
tests/: test_csv_generator.py  test_stock_information.py  test_stock_information_scraper.py
tests/data/: lly_book_value.html  lly_cash_flow.html  lly_growth_estimates.html  lly_pe_ratio_max.html  lly_pe_ratio_min.html  lly_revenue.html  lly_roic.html  meta_book_value.html  meta_cash_flow.html  meta_growth_estimates.html  meta_pe_ratio_max.html  meta_pe_ratio_min.html  meta_revenue.html  meta_roic.html
